--- a/hima/experiments/successor_representations/configs/runner/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/runner/pinball.yaml
@@ -11,14 +11,14 @@ start_position: [0, 0]
 actions: [[0, 3], [0.5, 3], [-0.5, 3]]
 
 # sp_ensemble | sp_grouped
-encoder: sp_ensemble
+encoder: sp_grouped
 # makes sense only for grouped: naive | learned
 decoder: naive
 
 env_conf: 'configs/pinball/default.yaml'
 agent_conf: 'configs/agent/pinball.yaml'
 layer_conf: 'configs/layer/pinball.yaml'
-encoder_conf: 'configs/encoder/sp_ensemble_pinball.yaml'
+encoder_conf: 'configs/encoder/sp_grouped.yaml'
 
 experiment: pinball
 setup: fork_skewed
