--- a/hima/experiments/successor_representations/configs/runner/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/runner/pinball.yaml
@@ -11,7 +11,7 @@ start_position: [0, 0]
 actions: [[0, 3], [0.5, 3], [-0.5, 3]]
 
 env_conf: 'configs/pinball/default.yaml'
-agent_conf: 'configs/agent/default.yaml'
+agent_conf: 'configs/agent/pinball.yaml'
 layer_conf: 'configs/layer/default.yaml'
 encoder_conf: 'configs/encoder/sp_ensemble.yaml'
 
