--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -205,7 +205,6 @@ SA:
     initial_rf_to_input_ratio: 4.0  #12?
     max_rf_to_input_ratio: 2.0
     learning_rate: 0.02
-    global_inhibition_strength: 0.2
     newborn_pruning_cycle: 1.0
     newborn_pruning_stages: 4
     prune_grow_cycle: 10.0
@@ -225,11 +224,10 @@ SE_DVS:
   sp:
     _base_: $_base.spatial_pooler.default
     initial_rf_to_input_ratio: 8.0
-    max_rf_to_input_ratio: 1.5
+    target_max_rf_sparsity: 1.5
     learning_rate: 0.001
-    global_inhibition_strength: 0.2
-    newborn_pruning_cycle: 2.0
-    newborn_pruning_stages: 10
+    newborn_pruning_cycle: 2.5
+    newborn_pruning_stages: 20
     prune_grow_cycle: 10.0
     adapt_to_ff_sparsity: False
   stp:
