--- a/hima/experiments/successor_representations/configs/agent/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/agent/pinball.yaml
@@ -1,13 +1,14 @@
 gamma: 0.99
-observation_reward_lr: 0.1
+observation_reward_lr: 0.05
+reward_scale: 5.0
 striatum_lr: 0.05
 sr_steps: 5
 approximate_tail: True
-inverse_temp: 1.0
+inverse_temp: 10.0
 
-# -1: softmax | p \in [0, 1]: eps-greedy
+# p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
 exploration_eps: -1
 # predict | plan | balance === 0-step | n-step | td-error based probability to use n-step
-action_value_estimate: balance
+action_value_estimate: predict
 # uniform | on_policy | off_policy
 sr_estimate_planning: on_policy
