--- a/hima/experiments/successor_representations/configs/hmm/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/hmm/pinball.yaml
@@ -1,3 +1,5 @@
 cells_per_column: 5
-batch_size: 1000
-alpha: 1.0
+batch_size: 200
+em_iterations: 200
+lr: 0.05
+alpha: 1.0  # dirichlet initialization dist parameter
