--- a/hima/experiments/successor_representations/configs/runner/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/runner/animalai.yaml
@@ -1,7 +1,7 @@
 log: True
 save_model: False
-project_name: 'sr_animalai_final'
-run_tag: lstm
+project_name: 'sr_animalai_all'
+run_tag: null
 
 n_episodes: 501
 update_rate: 50
@@ -9,15 +9,25 @@ max_steps: 50
 reset_context_period: 10
 action_inertia: 3
 log_gif_fps: 5
+camera_mode: clip
+
+# if True then use random strategy
+reward_free: True
+
+# model based sr testing
+test_srs: True
+test_sr_steps: 5
 
 # sp_ensemble | sp_grouped
 encoder: sp_grouped
 # makes sense only for grouped: naive | learned
-decoder: naive
+decoder: learned
+# fchmm | dhtm | lstm | rwkv
+layer: rwkv
 
 env_conf: 'configs/animalai/default.yaml'
 agent_conf: 'configs/agent/animalai.yaml'
-layer_conf: 'configs/lstm/animalai.yaml'
+layer_conf: 'configs/rwkv/animalai.yaml'
 encoder_conf: 'configs/encoder/sp_grouped_aai.yaml'
 decoder_conf: 'configs/decoder/animalai.yaml'
 
