--- a/hima/experiments/successor_representations/configs/agent/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/agent/animalai.yaml
@@ -3,11 +3,11 @@ observation_reward_lr: 0.04
 striatum_lr: 0.002
 sr_steps: 5
 approximate_tail: True
-inverse_temp: 1.0
+inverse_temp: 10.0
 
 # p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
 exploration_eps: -1
 # predict | plan | balance === 0-step | n-step | td-error based probability to use n-step
 action_value_estimate: predict
 # uniform | on_policy | off_policy
-sr_estimate_planning: on_policy
+sr_estimate_planning: uniform
