--- a/hima/experiments/successor_representations/configs/runner/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/runner/gridworld.yaml
@@ -6,6 +6,7 @@ run_tag: null
 n_episodes: 501
 update_rate: 50
 max_steps: 50
+reset_context_period: 10  # tested only for dhtm
 log_gif_fps: 5
 start_position: [5, 0]
 
