--- a/hima/experiments/successor_representations/configs/runner/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/runner/pinball.yaml
@@ -9,6 +9,7 @@ max_steps: 15
 log_gif_fps: 5
 start_position: [0, 0]
 actions: [[0, 3], [0.5, 3], [-0.5, 3]]
+action_inertia: 3
 camera_mode: clip
 
 # if True then use random strategy
@@ -22,8 +23,6 @@ test_sr_steps: 5
 encoder: sp_grouped
 # makes sense only for grouped: naive | learned
 decoder: learned
-# fchmm | dhtm | lstm | rwkv
-layer: rwkv
 
 env_conf: 'configs/pinball/default.yaml'
 agent_conf: 'configs/agent/pinball.yaml'
