--- a/hima/experiments/successor_representations/configs/agent/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/agent/pinball.yaml
@@ -1,13 +1,13 @@
 gamma: 0.99
-observation_reward_lr: 0.05
-striatum_lr: 0.05
-sr_steps: 0  # 0 means model free TD (on policy)
+observation_reward_lr: 0.1
+striatum_lr: 0.2
+sr_steps: 1  # 0 means model free TD (on policy)
 approximate_tail: True
-inverse_temp: 10.0
+inverse_temp: 5.0
 
 # p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
 exploration_eps: -1
 # predict | plan | balance === 0-step | n-step | td-error based probability to use n-step
 action_value_estimate: predict
 # uniform | on_policy | off_policy
-sr_estimate_planning: uniform
+sr_estimate_planning: on_policy
