--- a/hima/experiments/successor_representations/configs/agent/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/agent/animalai.yaml
@@ -1,13 +1,17 @@
-gamma: 0.99
-observation_reward_lr: 0.04
-striatum_lr: 0.002
-sr_steps: 5
+gamma: 0.9
+observation_reward_lr: 0.1
+striatum_lr: 1.0
+adaptive_lr: False
+sr_steps: 5  # 0 means model free TD (on policy)
+adaptive_sr: True
 approximate_tail: True
-inverse_temp: 10.0
+inverse_temp: 5.0
+lr_surprise: [0.2, 0.01]
+lr_td_error: [0.2, 0.01]
 
 # p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
 exploration_eps: -1
 # predict | plan | balance === 0-step | n-step | td-error based probability to use n-step
-action_value_estimate: predict
+action_value_estimate: balance
 # uniform | on_policy | off_policy
-sr_estimate_planning: uniform
+sr_estimate_planning: on_policy
