--- a/hima/experiments/successor_representations/configs/rwkv/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/rwkv/pinball.yaml
@@ -1,3 +1,11 @@
 n_hidden_vars: 5
 n_hidden_states: 500
-lr: 0.002
+
+#n_hidden_vars: 50
+#n_hidden_states: 4
+
+lr: 0.0005
+loss_propagation_schedule: 20
+
+srtd_tau: 0.01
+srtd_batch_size: 256
