--- a/hima/experiments/successor_representations/configs/rwkv/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/rwkv/pinball.yaml
@@ -1,11 +1,16 @@
 n_hidden_vars: 5
 n_hidden_states: 500
 
-#n_hidden_vars: 50
-#n_hidden_states: 4
-
 lr: 0.0005
 loss_propagation_schedule: 20
 
 srtd_tau: 0.01
 srtd_batch_size: 256
+
+## Require testing: Probably better params
+#n_hidden_vars: 80
+#n_hidden_states: 4
+#lr: 0.0008
+#loss_propagation_schedule: 20
+#srtd_tau: 0.05
+#srtd_batch_size: 10
