--- a/hima/experiments/temporal_pooling/sweeps/sp_attractor.yaml
+++ b/hima/experiments/temporal_pooling/sweeps/sp_attractor.yaml
@@ -8,18 +8,18 @@ parameters:
     values: [40, 41, 42, 43, 44] #, 45, 46, 47, 48, 49] #, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59]
 
   # for hyperparameter search we don't need too much logging and too much learning
-  iterate.._base_:
-    value: iterate_setups.mid
-  testing.._base_:
-    value: testing_setups.mnist
-  testing_setups..mnist.attractor_steps:
-    value: 5
+  train.._base_:
+    value: train_setups.full
+  test.._base_:
+    value: test_setups.small
+  attraction..learn_in_attraction:
+    value: true
 
-  sp..encoder.max_rf_to_input_ratio:
+  sp..encoder.target_rf_to_input_ratio:
     values:
-      - 1.2
-      - 1.5
       - 2.0
+      - 1.5
+      - 0.5
 
 #  sp..encoder.learning_rate:
 #    values:
@@ -27,22 +27,17 @@ parameters:
 #      - 0.02
 #      - 0.05
 
-  sp..attractor.max_rf_to_input_ratio:
+  sp..attractor.target_rf_to_input_ratio:
     values:
-      - 1.25
-      - 1.5
       - 2.0
+      - 1.5
+      - 0.5
 
 #  sp..attractor.learning_rate:
 #    values:
 #      - 0.005
 #      - 0.02
 #      - 0.05
-
-  testing_setups..mnist.learn_attractor_in_loop:
-    values:
-      - False
-      - True
 
 command:
   - ${env}
