--- a/hima/experiments/successor_representations/configs/agent/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/agent/pinball.yaml
@@ -1,7 +1,9 @@
 gamma: 0.9
 observation_reward_lr: 0.1
 striatum_lr: 1.0
-sr_steps: 10  # 0 means model free TD (on policy)
+adaptive_lr: False
+sr_steps: 1  # 0 means model free TD (on policy)
+adaptive_sr: False
 approximate_tail: True
 inverse_temp: 5.0
 lr_surprise: [0.2, 0.01]
