--- a/hima/experiments/temporal_pooling/configs/sp_attractor.yaml
+++ b/hima/experiments/temporal_pooling/configs/sp_attractor.yaml
@@ -3,6 +3,7 @@ project: stp.sp_attractor
 log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
 seed: 42
+binary: false
 train:
   _base_: train_setups.small
 test:
@@ -34,6 +35,7 @@ sp:
     prune_grow_cycle: 100.0
     adapt_to_ff_sparsity: True
     boosting_k: 0.5
+    output_mode: non_binary
 
   attractor:
     _base_: $_base.spatial_pooler.default
@@ -47,6 +49,7 @@ sp:
     newborn_pruning_stages: 10
     prune_grow_cycle: 100.0
     boosting_k: 0.5
+    output_mode: non_binary
 
 train_setups:
   full:
