sr experiments: add value function metric

--- a/hima/experiments/successor_representations/configs/runner/pinball.yaml
+++ b/hima/experiments/successor_representations/configs/runner/pinball.yaml
@@ -19,6 +19,8 @@ reward_free: True
 # model based sr testing
 test_srs: True
 test_sr_steps: 5
+log_value_function: True
+value_func_sigma: 2
 
 # sp_ensemble | sp_grouped
 encoder: sp_grouped
