--- a/hima/experiments/temporal_pooling/configs/sp_attractor.yaml
+++ b/hima/experiments/temporal_pooling/configs/sp_attractor.yaml
@@ -3,7 +3,7 @@ project: stp.sp_attractor
 log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
 seed: 42
-binary: false
+binary: true
 train:
   _base_: train_setups.small
 test:
@@ -24,6 +24,7 @@ envs:
 sp:
   encoder:
     _base_: $_base.spatial_pooler.default
+    _type_: sp.depr
     # input
     target_rf_to_input_ratio: 1.5
     # output
@@ -35,10 +36,11 @@ sp:
     prune_grow_cycle: 100.0
     adapt_to_ff_sparsity: True
     boosting_k: 0.5
-    output_mode: non_binary
+#    output_mode: non_binary
 
   attractor:
     _base_: $_base.spatial_pooler.default
+    _type_: sp.depr
     # input
     target_rf_to_input_ratio: 1.5
     # output
@@ -49,7 +51,7 @@ sp:
     newborn_pruning_stages: 10
     prune_grow_cycle: 100.0
     boosting_k: 0.5
-    output_mode: non_binary
+#    output_mode: non_binary
 
 train_setups:
   full:
