--- a/hima/experiments/successor_representations/configs/runner/pinball_2dmaze.yaml
+++ b/hima/experiments/successor_representations/configs/runner/pinball_2dmaze.yaml
@@ -27,7 +27,7 @@ encoder: sp_grouped
 # makes sense only for grouped: naive | learned
 decoder: learned
 
-env_conf: 'configs/pinball/debug.yaml'
+env_conf: 'configs/pinball/default.yaml'
 agent_conf: 'configs/agent/pinball.yaml'
 layer_conf: 'configs/rwkv/pinball.yaml'
 encoder_conf: 'configs/encoder/sp_grouped_pinball.yaml'
