--- a/hima/experiments/successor_representations/configs/lstm/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/lstm/animalai.yaml
@@ -1,3 +1,12 @@
-n_hidden_vars: 5
-n_hidden_states: 500
-lr: 0.001
+n_hidden_vars: 80
+n_hidden_states: 4
+
+lr: 0.0006
+loss_propagation_schedule: 20
+
+srtd_tau: 0.01
+srtd_batch_size: 256
+
+## Require testing: Probably better params
+#srtd_tau: 0.05
+#srtd_batch_size: 10
