--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,9 @@
 # media
-*.png filter=lfs diff=lfs merge=lfs -text
-*.jpg filter=lfs diff=lfs merge=lfs -text
+# *.png filter=lfs diff=lfs merge=lfs -text
+# *.jpg filter=lfs diff=lfs merge=lfs -text
 # *.svg filter=lfs diff=lfs merge=lfs -texts -text
-*.gif filter=lfs diff=lfs merge=lfs -text
-*.eps filter=lfs diff=lfs merge=lfs -text
+# *.gif filter=lfs diff=lfs merge=lfs -text
+# *.eps filter=lfs diff=lfs merge=lfs -text
 
 # data
 *.pkl filter=lfs diff=lfs merge=lfs -text
