--- a/hima/experiments/successor_representations/configs/runner/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/runner/animalai.yaml
@@ -1,46 +1,25 @@
 log: True
-save_model: False
-project_name: null
+project_name: animalai_test_new_runner
 run_tag: null
 
-n_episodes: 901
-update_period: 50
+n_episodes: 11
 update_start: 0
-max_steps: 50
-log_gif_fps: 3
+max_steps: 10
+reward_free: False
 action_inertia: 1
 frame_skip: 10
-camera_mode: clip
-
-# if True then use random strategy
-reward_free: False
-
-# fixed strategies
 strategies:
   - [0, 1, 1, 2, 1]
   - [1, 0, 2, 0, 2]
   - [2, 1, 1, 0, 1]
 
-# model based sr testing
-test_srs: False
-test_sr_steps: 5
-
-# sp_ensemble | sp_grouped
-encoder: sp_grouped
-# makes sense only for grouped: naive | learned
-decoder: learned
-
-env_conf: 'configs/animalai/default.yaml'
-agent_conf: 'configs/agent/animalai.yaml'
-layer_conf: 'configs/dhtm/animalai.yaml'
-encoder_conf: 'configs/encoder/sp_grouped_aai.yaml'
-decoder_conf: 'configs/decoder/animalai.yaml'
-
-experiment: animalai
-# list of setups
-setup:
+setups:
   # ['competition/01-01-01.yaml', 'competition/01-01-01_wall.yaml']
   ['custom/two_ways_left.yaml', 'custom/two_ways_right.yaml']
-setup_period: [299, 600]
+setup_period: [5, 7]
+
+env_conf: 'configs/environment/animalai/default.yaml'
+agent_conf: 'configs/agent/bio/animalai.yaml'
+metrics_conf: 'configs/metrics/animalai.yaml'
 
 seed: null
