--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -142,13 +142,15 @@ models:
 SE:
   sp:
     _base_: $_base.spatial_pooler.default
-    initial_rf_to_input_ratio: 8.0
-    target_rf_to_input_ratio: 1.5
+    initial_rf_to_input_ratio: 12.0
+    target_rf_to_input_ratio: 0.5
     learning_rate: 0.02
-    newborn_pruning_cycle: 2.5
+    newborn_pruning_cycle: 3.0
     newborn_pruning_stages: 20
+    newborn_pruning_mode: powerlaw
     prune_grow_cycle: 100.0
     adapt_to_ff_sparsity: False
+    boosting_k: 0.5
   stp:
     _base_: $_base.spatial_temporal_pooler.default
     max_pooling_window: 4
@@ -209,13 +211,16 @@ AA:
 SA:
   sp:
     _base_: $_base.spatial_pooler.default
-    initial_rf_to_input_ratio: 4.0  #12?
-    target_max_rf_sparsity: 2.0
+    initial_max_rf_sparsity: 0.25
+    initial_rf_to_input_ratio: 40.0
+    target_rf_to_input_ratio: 0.75
     learning_rate: 0.02
-    newborn_pruning_cycle: 1.0
-    newborn_pruning_stages: 4
-    prune_grow_cycle: 10.0
+    newborn_pruning_cycle: 3.0
+    newborn_pruning_stages: 16
+    newborn_pruning_mode: powerlaw
+    prune_grow_cycle: 100.0
     adapt_to_ff_sparsity: False
+    boosting_k: 0.25
   stp:
     _base_: $_base.spatial_temporal_pooler.default
     initial_rf_to_input_ratio: 4.0  #12?
