fix SP sdr tracking

--- a/hima/experiments/temporal_pooling/configs/stp.yaml
+++ b/hima/experiments/temporal_pooling/configs/stp.yaml
@@ -88,6 +88,8 @@ model:
 track_streams:
   input.sdr:
     - cross.online.el
+  SE.output.sdr:
+    - cross.online.el
   SA.output.sdr:
     - cross.online.el
   TM.correctly_predicted_cells.sdr:
