--- a/hima/experiments/temporal_pooling/configs/sp_attractor.yaml
+++ b/hima/experiments/temporal_pooling/configs/sp_attractor.yaml
@@ -1,5 +1,5 @@
 _type_: stp_experiment.sp_attractor
-project: stp.sp_attractor
+project: stp.sp_attractor_rate_sdr
 log: True    # wandb logging, use 'dry' for dummy do-nothing logging to test metrics collection
 
 seed: 42
@@ -10,22 +10,17 @@ test:
   _base_: test_setups.small
 
 attraction:
-  n_steps: 3
+  n_steps: 5
   learn_in_attraction: True
 
 encoder: sp.encoder
 attractor: sp.attractor
 
-envs:
-  random_bits:
-    sds: [64, 0.375]
-    similarity_range: [0, 1]
-
 sp:
   encoder:
     _base_: $_base.spatial_pooler.default
-    _type_: sp.vectorized
-#    _type_: sp.float
+#    _type_: sp.vectorized
+    _type_: sp.float
 #    _type_: sp.sdrr
     # input
     target_rf_to_input_ratio: 0.25
@@ -41,14 +36,15 @@ sp:
 
   attractor:
     _base_: $_base.spatial_pooler.default
-    _type_: sp.vectorized
-#    _type_: sp.float
+#    _type_: sp.vectorized
+    _type_: sp.float
+#    _type_: sp.sdrr
     # input
     target_rf_to_input_ratio: 0.75
     # output
     output_sds: [500, 16]
     # learning
-    learning_rate: 0.02
+    learning_rate: 0.004
     newborn_pruning_cycle: 2.0
     newborn_pruning_stages: 10
     prune_grow_cycle: 100.0
